--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -1,10 +1,5 @@
 @import "./main";
-:root {
-  --font-NanumGithic: 'NanumGothic';
-  --font-NanumGithicB: 'NanumGothicBold';
-  --font-NanumGithicL: 'NanumGothicLight';
-}
-body { font-family:"NanumGothic", sans-serif; }
+body { font-family: 'SUIT',sans-serif; font-weight:500; }
 .blind {
   position:absolute;
   top:-99999px;
