[리] 초기 router 및 Main 구조 생성

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,6 @@ img,fieldset{border:0}
 em,address,i{font-style:normal;}
 table{border-collapse:collapse;}
 ul li, 
-ol li {
+ol li, li {
   list-style:none;
 }
